fix image align and navbar

--- a/style.css
+++ b/style.css
@@ -24,17 +24,18 @@
 
 /*banner css */
 .petals {
+  padding-top: 65px;
   max-width: 100vw;
-  max-height: 600px;
   overflow: hidden;
 }
 .side-container {
   padding-right: 0;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 13px;
 }
 .main-banner img {
+  align-self: stretch;
   width: 100%;
 }
 
